<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="80dp"
            tools:context=".DetailActivity"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="80dp">

            <TextView
                android:id="@+id/tv_originalTitle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/background"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="25sp"
                app:layout_constraintBottom_creator="1"

                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_creator="1"

                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_creator="1"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"

                tools:text="Chappie" />

            <ImageView
                android:id="@+id/iv_poster_detail_image"

                android:layout_width="200dp"

                android:layout_height="200dp"
                android:layout_marginTop="10dp"

                android:contentDescription="@string/detail_poster_image_content_descriptor"
                app:layout_constraintBottom_creator="1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_creator="0"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_creator="1"

                app:layout_constraintTop_creator="1"

                app:layout_constraintTop_toBottomOf="@+id/tv_originalTitle"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail_image"
                app:layout_constraintTop_toTopOf="@+id/iv_poster_detail_image"
                tools:text="2015" />

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                tools:text="120min" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
                tools:text="8.3/10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_favourite"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/mark_as_favourite_button"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster_detail_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating"
                android:onClick="onClickFavourite"/>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail_image"
                tools:text="Chappie" />

            <View
                android:id="@+id/horizontal_separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/tv_trailer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/trailers_label"
                android:textSize="22sp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_separator" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/trailers_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_trailer_label"
                android:padding="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/trailers_list_view">
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_videos_not_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:text="@string/videos_not_found"/>
            </FrameLayout>

            <View
                android:id="@+id/horizontal_separator_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_layout"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/tv_reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/reviews_label"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_separator_2" />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/reviews_layout"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reviews_list_view">
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_reviews_not_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:text="@string/reviews_not_found"/>
            </FrameLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>